--- a/_posts/2026-01-25-1.html
+++ b/_posts/2026-01-25-1.html
@@ -9,7 +9,7 @@ background: '/img/posts/001.jpg'
 <p>天氣實在太冷，寢室僅有我和另一個室友，打了空調暖氣也只有房間的上方比較暖和。那就索性把電腦帶到上鋪床上，找個電影或電視劇看吧。這樣想著，於是上床躺下，開始看<abbr title="Tokyo Broadcasting System Television,東京放送系統電視台">TBS</abbr>電視台于1993年第一次放映的電視劇《高校教師》。
 </p>
 
-<p>之所以想要看這個，是因爲最近在讀的書裏其中一本是宇野常宽<sup>1</sup>所著的<i>《〇〇年代的想象力》（ゼロ年代の想像力）</i>，在對九〇年代想象力論述中提到了一下這部劇，即野島伸司<sup>2</sup>所作的所謂“校園三部曲”之第一部。</p>
+<p>之所以想要看這個，是因爲最近在讀的書裏其中一本是宇野常宽<sup><a href="#1">1</a></sup>所著的<i>《〇〇年代的想象力》（ゼロ年代の想像力）</i>，在對九〇年代想象力論述中提到了一下這部劇，即野島伸司<sup><a href="#2">2</a></sup>所作的所謂“校園三部曲”之第一部。</p>
 <p><blockquote>"另一方面，野島將同時代的岡崎京子等作家所象徵的街頭亞文化群體所大規模利用的元素——商品化的性與死，以及‘在日常中導入虛擬的外部性’——徹底推廣到了大衆層面，例如，《高校教師》(1993)中的亂倫、《人間失格：假如我死掉的話》(1994)中的學生因霸凌而自殺，等等。"</blockquote></p>
 <p>本來作者對此只是一筆帶過，但好奇心驅使我去看它，<s>故事發生在女子高中，女主還這麽好看......</s>,同時也是打發打發時間。</p>
 
@@ -23,8 +23,8 @@ background: '/img/posts/001.jpg'
 
 <hr />
 
-<p><a href="https://zh.wikipedia.org/wiki/%E5%AE%87%E9%87%8E%E5%B8%B8%E5%AF%AC" target="_blank">1</a>.日本評論家，目前擔任批評雜誌『PLANETS』編集長。</p>
-<p><a href="https://zh.wikipedia.org/wiki/%E9%87%8E%E5%B3%B6%E4%BC%B8%E5%8F%B8" target="_blank">2</a>.日本資深編劇，活躍領域亦包括詩、繪本、小說、作詞等方面。</p>
+<p id="1"><a href="https://zh.wikipedia.org/wiki/%E5%AE%87%E9%87%8E%E5%B8%B8%E5%AF%AC" target="_blank">1</a>.日本評論家，目前擔任批評雜誌『PLANETS』編集長。</p>
+<p id="2"><a href="https://zh.wikipedia.org/wiki/%E9%87%8E%E5%B3%B6%E4%BC%B8%E5%8F%B8" target="_blank">2</a>.日本資深編劇，活躍領域亦包括詩、繪本、小說、作詞等方面。</p>
 
 <h2 class="section-heading"></h2>
 
