--- a/_posts/2026-01-25-1.html
+++ b/_posts/2026-01-25-1.html
@@ -15,16 +15,16 @@ background: '/img/posts/001.jpg'
 
 <p>結果一發不可收拾，看到兩點多鈡，第二天中午醒來後，吃過飯繼續看，晚上八點就全看完了。</p>
 
-<p>看罷，我便琢磨著，如果用一句话概括这个电视剧的情节，大概是這樣——<strong>这是一个关于两个老好人——本前途光明的年轻生物学者、性格耿直却关心学生的体育老师和两个女高中生如何被社会一步步吞噬的故事。</strong></p>
+<p>看罷，我便琢磨著，如果用一句话概括这个电视剧的情节，大概是這樣——<strong> 這是一個關於兩個老好人——本前途光明的年輕生物學者、性格耿直卻關心學生的體育老師，以及兩位女高中生，如何被社會一步步吞噬的故事</strong></p>
 
-<p>虽然这个电视剧的吸睛处在于师生恋，可是我不觉得这是核心思想。一方面很明显野岛伸司在劇中諸多情節中都反映了当时日本社会下的诸多现实问题，另一方面这符合宇野所述，当时九〇年代人们面对的是所谓“永无止境的日常”，人们的生活需要导入“外部性”，这促成了剧中的乱伦和诸多或许夸张的情节产生。</p>
+<p>雖然這部電視劇吸引人的地方在於師生戀，但我並不認為這是核心思想。一方面很明顯野島伸司在劇中多處情節都反映了當時日本社會的諸多現實問題，另一方面這也符合宇野所述：在九○年代，人們面對的是所謂「永無止境的日常」，生活需要導入「外部性」，這促成了劇中亂倫與許多或許誇張的情節出現。</p>
 
 <p>話説回來，森田童子的歌真是好聽啊！</p>
 
 <hr />
 
-<p id="1"><a href="#1_">1</a>.<a href="https://zh.wikipedia.org/wiki/%E5%AE%87%E9%87%8E%E5%B8%B8%E5%AF%AC" target="_blank">宇野常寬</a>，日本評論家，目前擔任批評雜誌『PLANETS』編集長。</p>
-<p id="2"><a href="#1_">2</a>.<a href="https://zh.wikipedia.org/wiki/%E9%87%8E%E5%B3%B6%E4%BC%B8%E5%8F%B8" target="_blank">野島伸司</a>，日本資深編劇，活躍領域亦包括詩、繪本、小說、作詞等方面。</p>
+<p id="1"><a href="#1_">1</a>：<a href="https://zh.wikipedia.org/wiki/%E5%AE%87%E9%87%8E%E5%B8%B8%E5%AF%AC" target="_blank">宇野常寬</a>，日本評論家，目前擔任批評雜誌『PLANETS』編集長。</p>
+<p id="2"><a href="#1_">2</a>：<a href="https://zh.wikipedia.org/wiki/%E9%87%8E%E5%B3%B6%E4%BC%B8%E5%8F%B8" target="_blank">野島伸司</a>，日本資深編劇，活躍領域亦包括詩、繪本、小說、作詞等方面。</p>
 
 <h2 class="section-heading"></h2>
 
