--- a/about.html
+++ b/about.html
@@ -2,10 +2,11 @@
 layout: page
 title: 關於我
 description: 
-background: '/img/bg-about.jpg'
+background: '/img/鹿の子.jpg'
 ---
 
-<p> 來自中國大陸的一名普通大學生。堅持以理解和興趣為基礎建構知識體系。喜歡閲讀，喜歡瞭解和學習人文歷史、文化藝術乃至科學技術；喜愛日本文化。 </p>
-
+<p> 來自中國大陸的一名普通大學生。</p>
+<p>堅持以理解和興趣為基礎建構知識體系。</p>
+<p>喜歡閲讀，喜歡瞭解和學習人文歷史、文化藝術乃至科學技術；喜愛日本文化。 </p>
 <p>不善社交，但樂於交友。</p>
 
